<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/row_num"
        android:layout_width="0dp"
        android:layout_weight="0.20"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textSize="20px"></TextView>

    <TextView
        android:id="@+id/row_full_distance"
        android:layout_width="0dp"
        android:layout_weight="0.20"
        android:layout_height="wrap_content"
        android:text="@string/full_distance"
        android:textSize="20px"></TextView>

    <TextView
        android:id="@+id/row_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"
        android:text="@string/distance"
        android:textSize="20px"></TextView>

    <TextView
        android:id="@+id/row_speed"
        android:layout_width="0dp"
        android:layout_weight="0.20"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:textSize="20px"></TextView>

    <TextView
        android:id="@+id/row_time"
        android:layout_width="0dp"
        android:layout_weight="0.20"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="20px"></TextView>

</LinearLayout>
