<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:text="@string/gps"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:text="@string/fix"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/gpsAvailable"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="#ff0000" />

        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:text="@string/status"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/gpsFix"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="#ff0000" />

        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:text="@string/acc"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/gpsAccuracity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:text="00.0"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Space
            android:layout_width="4dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:text="@string/satelites"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/gpsSatelites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/0"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/scheduled"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="13"
            android:layout_row="1"
            android:text="@string/current"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/avg_speed"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/planedAvgSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:inputType="numberDecimal"
            android:text="000.00"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/actualAvgSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="13"
            android:layout_row="3"
            android:text="000.00"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:text="@string/distance"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/planedDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="4"
            android:inputType="numberDecimal"
            android:text="000.00"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <!--        android:background="@android:color/transparent"-->

        <TextView
            android:id="@+id/actualDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="13"
            android:layout_row="4"
            android:inputType="numberDecimal"
            android:text="000.00"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btClearDistance"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="14"
            android:layout_row="4"
            android:background="@drawable/clear" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/total_distance"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/planedTotalDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:text="000.00" />

        <EditText
            android:id="@+id/actualTotalDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="13"
            android:layout_row="2"
            android:text="000.00" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/planedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="5"
            android:editable="true"
            android:inputType="time"
            android:text="00:00:00"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/actualTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="13"
            android:layout_row="5"
            android:inputType="time"
            android:text="00:00:00"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btClearTime"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="14"
            android:layout_row="5"
            android:background="@drawable/clear" />

        <Button
            android:id="@+id/btNext"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:layout_column="1"
            android:layout_columnSpan="14"
            android:layout_row="6"
            android:text="@string/next" />
    </GridLayout>

    <include layout="@layout/header_row" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:longClickable="false" />
</LinearLayout>
